finish handwork section and fixed bugs

--- a/source/sass/blocks/auxiliary.scss
+++ b/source/sass/blocks/auxiliary.scss
@@ -50,3 +50,10 @@ body {
   font-weight: normal;
   line-height: 2;
 }
+
+.page-title {
+  font-size: 26.5px;
+  font-weight: bold;
+  line-height: 1.11;
+  color: #010000;
+}
