--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -1,10 +1,50 @@
 .handwork__title {
+  .handwork__text {
+    width: 244px;
+    margin: -51px auto 0 auto;
+  }
+  display: flex;
+  align-items: center;
   text-align: center;
-  min-height: 305px;
-  background: url("../../img/hero-mobile@1x.jpg") no-repeat center;
+  min-height: 283px;
+  background: url("../../img/hero-mobile@1x.jpg") no-repeat 50% 20%;
 }
 
-.handwork__text {
-  margin: 0;
-  padding: 0;
+.handwork__goods {
+  .handwork__text {
+    width: 106px;
+    font-size: 19px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.26;
+    letter-spacing: normal;
+    text-align: left;
+    color: #ffffff;
+  }
+}
+
+.handwork__interior {
+  background-color: #63d1bb;
+}
+
+.handwork__toys {
+  background-color: #56c3b2;
+}
+
+.handwork__interior,
+.handwork__toys {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none;
+  padding-left: 29px;
+}
+
+.handwork__image-itn {
+  padding-right: 36px;
+}
+
+.handwork__image-toys {
+  padding-right: 27px;
 }
