--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,3 +1,13 @@
 .header {
+  position: relative;
   box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
+}
+
+.header__logo {
+  display: inline-block;
+  padding: 22px 0 19px 0;
+}
+
+.header__inner {
+  text-align: center;
 }
