--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -1,4 +1,5 @@
 .menu__list {
+  text-align: left;
   width: 320px;
   margin: 0;
   padding: 0;
@@ -7,7 +8,7 @@
 .menu__item {
   list-style: none;
   box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
-  padding: 32px 63px;
+  padding: 32px 63px 32px 75px;
 }
 
 .menu__item-search {
@@ -25,7 +26,6 @@
   text-overflow: ellipsis;
   border: none;
   width: 100%;
-  padding: 6px 0 6px 0;
 }
 
 .menu__link {
@@ -34,4 +34,10 @@
   line-height: 1.41;
   text-decoration: none;
   color: #000000;
+}
+
+.menu__btn {
+  position: absolute;
+  top: 31px;
+  right: 0;
 }
