--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,8 @@
 @import "blocks/auxiliary";
+@import "blocks/variables";
+@import "blocks/mixins";
+@import "blocks/fonts";
 @import "blocks/header";
 @import "blocks/menu";
 @import "blocks/handwork";
+@import "blocks/baskets";
