--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,13 +1,4 @@
-.header {
-  position: relative;
-  box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
+.logo__image {
+  margin: 22px 0;
 }
 
-.header__logo {
-  display: inline-block;
-  padding: 22px 0 19px 0;
-}
-
-.header__inner {
-  text-align: center;
-}
