--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -1,14 +1,10 @@
 .menu__list {
-  text-align: left;
-  width: 320px;
-  margin: 0;
-  padding: 0;
+  @include reset-list;
 }
 
 .menu__item {
-  list-style: none;
   box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
-  padding: 32px 63px 32px 75px;
+  padding: 32px 0;
 }
 
 .menu__item-search {
@@ -38,6 +34,6 @@
 
 .menu__btn {
   position: absolute;
-  top: 31px;
+  top: 35px;
   right: 0;
 }
