--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -1,10 +1,3 @@
-.handwork__inner {
-  display: flex;
-  justify-content: space-between;
-  width: 260px;
-  margin: 0 auto;
-}
-
 .handwork__title {
   .handwork__text {
     width: 244px;
@@ -22,11 +15,7 @@
     width: 106px;
     font-size: 19px;
     font-weight: bold;
-    font-stretch: normal;
-    font-style: normal;
     line-height: 1.26;
-    letter-spacing: normal;
-    text-align: left;
     color: #ffffff;
     margin: 0;
     padding-top: 8px;
@@ -44,10 +33,15 @@
   background-color: #56c3b2;
 }
 
+.handwork__inner {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
 .handwork__interior,
 .handwork__toys {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   text-decoration: none;
   min-height: 103px;
@@ -57,3 +51,5 @@
 .handwork__image-toys {
   opacity: 0.2;
 }
+
+
