--- a/source/sass/blocks/baskets.scss
+++ b/source/sass/blocks/baskets.scss
@@ -1,8 +1,3 @@
-.baskets__inner {
-  width: 260px;
-  margin: 0 auto;
-}
-
 .baskets__title {
   padding: 34px 0 8px 0;
   margin: 0;
@@ -26,6 +21,10 @@
   margin: 0 0 34px 0;
 }
 
+table {
+  border-collapse: collapse;
+}
+
 .baskets__desc {
   .baskets__table {
     border-bottom: 1px solid #cecece;
@@ -38,7 +37,23 @@
 .baskets__value,
 .baskets__field {
   p {
-    margin: 0;
-    padding: 0;
+    @include reset-list;
   }
+}
+
+.baskets__prise {
+  font-size: 17px;
+  font-weight: bold;
+  line-height: 1.41;
+  color: $color-brown;
+  margin-bottom: 28px;
+}
+
+.button {
+  @include button-reset;
+  @include button-style;
+}
+
+.baskets__to-order-btn {
+  margin-bottom: 36px;
 }
