--- a/source/sass/blocks/mixins.scss
+++ b/source/sass/blocks/mixins.scss
@@ -3,3 +3,22 @@
   padding: 0;
   list-style: none;
 }
+
+@mixin button-reset {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+@mixin button-style {
+  font-size: 17px;
+  font-weight: bold;
+  line-height: 1.18;
+  color: $color-brown;
+  text-transform: uppercase;
+  padding: 20px 85px;
+  border: solid 2px $color-brown;
+}
