--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -7,7 +7,7 @@
   align-items: center;
   text-align: center;
   min-height: 283px;
-  background: url("../../img/hero-mobile@1x.jpg") no-repeat 50% 20%;
+  background: url("../img/hero-mobile@1x.jpg") no-repeat 50% 20%;
 }
 
 .handwork__goods {
@@ -36,7 +36,6 @@
 .handwork__inner {
   display: flex;
   justify-content: space-between;
-  width: 100%;
 }
 
 .handwork__interior,
