--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,8 +1,11 @@
-@import "blocks/auxiliary";
 @import "blocks/variables";
 @import "blocks/mixins";
 @import "blocks/fonts";
+@import "blocks/auxiliary";
 @import "blocks/header";
 @import "blocks/menu";
 @import "blocks/handwork";
 @import "blocks/baskets";
+@import "blocks/about-us";
+@import "blocks/reviews.scss";
+@import "blocks/contacts.scss";
