--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,3 +1,11 @@
+.header {
+  position: relative;
+}
+
+.header__logo {
+  display: flex;
+}
+
 .logo__image {
-  margin: 22px 0;
+  margin: 22px auto;
 }
