--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,3 +9,5 @@
 @import "blocks/about-us";
 @import "blocks/reviews.scss";
 @import "blocks/contacts.scss";
+@import "blocks/footer.scss";
+@import "blocks/modal.scss";
