--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -5,6 +5,7 @@
 .menu__item {
   box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
   padding: 32px 0;
+  padding-left: 24%;
 }
 
 .menu__item-search {
@@ -21,7 +22,7 @@
   color: #000000;
   text-overflow: ellipsis;
   border: none;
-  width: 100%;
+  width: 75%;
 }
 
 .menu__link {
@@ -34,6 +35,6 @@
 
 .menu__btn {
   position: absolute;
-  top: 35px;
+  top: 30px;
   right: 0;
 }
