--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,8 +7,8 @@
 @import "blocks/handwork";
 @import "blocks/baskets";
 @import "blocks/about-us";
-@import "blocks/reviews.scss";
-@import "blocks/contacts.scss";
-@import "blocks/footer.scss";
-@import "blocks/modal.scss";
-@import "blocks/catalog.scss";
+@import "blocks/reviews";
+@import "blocks/contacts";
+@import "blocks/footer";
+@import "blocks/modal";
+@import "blocks/catalog";
