--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -51,7 +51,7 @@ input[type="radio"]:checked + .modal__size {
   margin-bottom: 46px;
 }
 
-fieldset {
+.modal__fieldset {
   border: none;
   padding: 0;
 }
