--- a/10/css/style.css
+++ b/10/css/style.css
@@ -64,7 +64,8 @@ body {
 .reviews__inner,
 .contacts__inner,
 .footer__inner,
-.catalog__inner {
+.catalog__inner,
+.form__inner {
   margin: 0 auto;
   width: 260px; }
 
@@ -542,5 +543,141 @@ input[type="radio"]:checked + .modal__size {
   width: 192px;
   padding: 14px 0;
   margin-bottom: 33px; }
+
+.title__text-form {
+  padding: 76px 35px; }
+
+.form__text {
+  font-size: 13px;
+  color: #444444;
+  line-height: 1.85;
+  margin: 30px 0; }
+
+.form__fieldset {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border: none;
+  padding: 0; }
+  .form__fieldset input::-webkit-input-placeholder {
+    opacity: 0.3;
+    font-size: 17px;
+    line-height: 1.06;
+    color: #444444; }
+  .form__fieldset input::-moz-placeholder {
+    opacity: 0.3;
+    font-size: 17px;
+    line-height: 1.06;
+    color: #444444; }
+  .form__fieldset input:-ms-input-placeholder {
+    opacity: 0.3;
+    font-size: 17px;
+    line-height: 1.06;
+    color: #444444; }
+  .form__fieldset input::-ms-input-placeholder {
+    opacity: 0.3;
+    font-size: 17px;
+    line-height: 1.06;
+    color: #444444; }
+  .form__fieldset input::placeholder {
+    opacity: 0.3;
+    font-size: 17px;
+    line-height: 1.06;
+    color: #444444; }
+
+.form__fieldset:not(:last-of-type) {
+  margin-bottom: 30px; }
+
+.form__legend {
+  position: relative;
+  font-size: 17px;
+  font-weight: bold;
+  line-height: 0.94;
+  text-transform: uppercase;
+  color: #63d1bb;
+  margin-bottom: 30px; }
+  .form__legend::after {
+    content: "";
+    position: absolute;
+    top: 6px;
+    left: 59px;
+    width: 198px;
+    height: 1px;
+    background-color: #63d1bb; }
+
+.form__legend-email::after {
+  top: 6px;
+  left: 78px;
+  width: 179px; }
+
+.form__legend-type,
+.form__legend-color {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row; }
+
+.form__style-text {
+  font-size: 17px;
+  font-weight: bold;
+  line-height: 1.06; }
+  .form__style-text .form__input-padding {
+    margin-right: 22px;
+    margin-bottom: 20px; }
+
+.form__placeholder {
+  width: 100%;
+  border: none;
+  -webkit-box-shadow: inset 0 -2px 0 0 #000000;
+          box-shadow: inset 0 -2px 0 0 #000000;
+  padding: 18px 0; }
+
+.form__textarea textarea {
+  resize: none;
+  border: solid 2px #444444; }
+  .form__textarea textarea::-webkit-input-placeholder {
+    opacity: 0.3;
+    font-size: 17px;
+    line-height: 1.06;
+    color: #444444;
+    padding: 18px 75px 0 17px; }
+  .form__textarea textarea::-moz-placeholder {
+    opacity: 0.3;
+    font-size: 17px;
+    line-height: 1.06;
+    color: #444444;
+    padding: 18px 75px 0 17px; }
+  .form__textarea textarea:-ms-input-placeholder {
+    opacity: 0.3;
+    font-size: 17px;
+    line-height: 1.06;
+    color: #444444;
+    padding: 18px 75px 0 17px; }
+  .form__textarea textarea::-ms-input-placeholder {
+    opacity: 0.3;
+    font-size: 17px;
+    line-height: 1.06;
+    color: #444444;
+    padding: 18px 75px 0 17px; }
+  .form__textarea textarea::placeholder {
+    opacity: 0.3;
+    font-size: 17px;
+    line-height: 1.06;
+    color: #444444;
+    padding: 18px 75px 0 17px; }
+
+.form__style-text-mb {
+  margin-bottom: 20px; }
+
+.form__legend-phone,
+.form__legend-email {
+  margin: 0; }
 
 /*# sourceMappingURL=style.css.map */
