--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -3,27 +3,28 @@
 }
 
 .menu__item {
+  text-align: center;
+  width: auto;
   box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
   padding: 32px 0;
-  padding-left: 24%;
 }
 
-.menu__item-search {
-  &::placeholder {
-    font-size: 17px;
-    font-weight: bold;
-    line-height: 1.41;
-    color: #000000;
-    text-overflow: ellipsis;
-  }
-  font-size: 17px;
-  font-weight: bold;
-  line-height: 1.41;
-  color: #000000;
-  text-overflow: ellipsis;
-  border: none;
-  width: 75%;
-}
+//.menu__item-search {
+//  &::placeholder {
+//    font-size: 17px;
+//    font-weight: bold;
+//    line-height: 1.41;
+//    color: #000000;
+//    text-overflow: ellipsis;
+//  }
+//  font-size: 17px;
+//  font-weight: bold;
+//  line-height: 1.41;
+//  color: #000000;
+//  text-overflow: ellipsis;
+//  border: none;
+//  width: 75%;
+//}
 
 .menu__link {
   font-size: 17px;
