--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -22,11 +22,11 @@
   padding: 0;
 }
 
-.form__fieldset {
-  &:not(:last-of-type) {
-    margin-bottom: 30px;
-  }
-}
+//.form__fieldset {
+//  &:not(:last-of-type) {
+//    margin-bottom: 30px;
+//  }
+//}
 
 .form__legend {
   &::after {
