--- a/10/css/style.css
+++ b/10/css/style.css
@@ -37,7 +37,6 @@ input[type="radio"].visually-hidden {
 
 /* Основные стили документа */
 body {
-  width: 320px;
   margin: 0;
   padding: 0;
   font-family: "OpenSans", "Arial", sans-serif;
@@ -86,49 +85,11 @@ body {
   list-style: none; }
 
 .menu__item {
+  text-align: center;
+  width: auto;
   -webkit-box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
           box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
-  padding: 32px 0;
-  padding-left: 24%; }
-
-.menu__item-search {
-  font-size: 17px;
-  font-weight: bold;
-  line-height: 1.41;
-  color: #000000;
-  text-overflow: ellipsis;
-  border: none;
-  width: 75%; }
-  .menu__item-search::-webkit-input-placeholder {
-    font-size: 17px;
-    font-weight: bold;
-    line-height: 1.41;
-    color: #000000;
-    text-overflow: ellipsis; }
-  .menu__item-search::-moz-placeholder {
-    font-size: 17px;
-    font-weight: bold;
-    line-height: 1.41;
-    color: #000000;
-    text-overflow: ellipsis; }
-  .menu__item-search:-ms-input-placeholder {
-    font-size: 17px;
-    font-weight: bold;
-    line-height: 1.41;
-    color: #000000;
-    text-overflow: ellipsis; }
-  .menu__item-search::-ms-input-placeholder {
-    font-size: 17px;
-    font-weight: bold;
-    line-height: 1.41;
-    color: #000000;
-    text-overflow: ellipsis; }
-  .menu__item-search::placeholder {
-    font-size: 17px;
-    font-weight: bold;
-    line-height: 1.41;
-    color: #000000;
-    text-overflow: ellipsis; }
+  padding: 32px 0; }
 
 .menu__link {
   font-size: 17px;
@@ -141,6 +102,9 @@ body {
   position: absolute;
   top: 30px;
   right: 0; }
+
+.handwork {
+  margin-bottom: 34px; }
 
 .handwork__title {
   display: -webkit-box;
@@ -197,7 +161,7 @@ body {
   opacity: 0.2; }
 
 .baskets__title {
-  padding: 34px 0 8px 0;
+  padding: 0 0 8px 0;
   margin: 0; }
 
 .baskets__week {
@@ -342,6 +306,7 @@ table {
 
 .contacts__map {
   position: relative;
+  text-align: center;
   margin-bottom: 39px; }
 
 .contacts__pin {
@@ -588,9 +553,6 @@ input[type="radio"]:checked + .modal__size {
     font-size: 17px;
     line-height: 1.06;
     color: #444444; }
-
-.form__fieldset:not(:last-of-type) {
-  margin-bottom: 30px; }
 
 .form__legend {
   position: relative;
