fixed catalog title

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -3,7 +3,7 @@
   font-weight: bold;
   line-height: 1.11;
   text-align: center;
-  padding: 76px 41px;
+  padding: 76px 0;
   background-color: #f1f1f1;
   margin: 0;
 }
