--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,5 +1,5 @@
 .title__text-form {
-  padding: 76px 35px;
+  padding: 76px 0;
 }
 
 .form__text {
@@ -9,24 +9,25 @@
   margin: 30px 0;
 }
 
+.form__radio {
+  display: flex;
+  flex-direction: column;
+}
+
+.form__interior,
+.form__games {
+  display: flex;
+}
+
 .form__fieldset {
-  input::placeholder {
-    opacity: 0.3;
-    font-size: 17px;
-    line-height: 1.06;
-    color: $color-brown;
+  &:not(:last-of-type) {
+    margin-bottom: 30px;
   }
   display: flex;
   flex-direction: column;
   border: none;
   padding: 0;
 }
-
-//.form__fieldset {
-//  &:not(:last-of-type) {
-//    margin-bottom: 30px;
-//  }
-//}
 
 .form__legend {
   &::after {
@@ -61,17 +62,26 @@
   flex-direction: row;
 }
 
+.form__input-padding {
+  margin-right: 22px;
+  margin-bottom: 20px;
+}
+
 .form__style-text {
-  .form__input-padding {
-    margin-right: 22px;
-    margin-bottom: 20px;
-  }
+  margin-right: 22px;
+  margin-bottom: 20px;
   font-size: 17px;
   font-weight: bold;
   line-height: 1.06;
 }
 
 .form__placeholder {
+  &::placeholder {
+    opacity: 0.3;
+    font-size: 17px;
+    line-height: 1.06;
+    color: $color-brown;
+  }
   width: 100%;
   border: none;
   box-shadow: inset 0 -2px 0 0 #000000;
