:heavy_check_mark: Сборка #10

--- a/10/css/style.css
+++ b/10/css/style.css
@@ -356,6 +356,8 @@ table {
   margin: 27px 0; }
 
 .modal {
+  width: 320px;
+  margin: auto;
   -webkit-box-shadow: 0 5px 10px 0 rgba(0, 1, 1, 0.25);
           box-shadow: 0 5px 10px 0 rgba(0, 1, 1, 0.25);
   border: solid 1px #c6c6c6; }
