--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -44,6 +44,10 @@
   margin: 0 0 17px 0;
 }
 
+.catalog__title-width {
+  width: 180px;
+}
+
 .catalog__text {
   font-size: 13px;
   line-height: 2.31;
