--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -10,12 +10,14 @@
 }
 
 .modal__title {
+  width: 160px;
   font-size: 25px;
   font-weight: bold;
   line-height: 1.2;
   text-align: center;
   text-transform: uppercase;
   padding: 36px 0 25px 0;
+  margin: 0 auto;
 }
 
 .modal__legend {
