fixed baskets table

--- a/source/sass/blocks/baskets.scss
+++ b/source/sass/blocks/baskets.scss
@@ -21,17 +21,15 @@
   margin: 0 0 34px 0;
 }
 
-table {
-  border-collapse: collapse;
+.baskets__desc-table {
+  border-bottom: 1px solid #cecece;
+  color: $color-brown;
 }
 
-.baskets__desc {
-  .baskets__table {
-    border-bottom: 1px solid #cecece;
-    color: $color-brown;
-  }
+.baskets__table {
   width: 100%;
   margin: 0 0 28px 0;
+  border-collapse: collapse;
 }
 
 .baskets__value,
