fixed the base styles file

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,7 @@
+@import "base/layout";
 @import "blocks/variables";
 @import "blocks/mixins";
 @import "blocks/fonts";
-@import "blocks/auxiliary";
 @import "blocks/header";
 @import "blocks/menu";
 @import "blocks/handwork";
