--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,6 @@
 @import "base/layout";
-@import "blocks/variables";
-@import "blocks/mixins";
+@import "base/variables";
+@import "base/mixins";
 @import "blocks/fonts";
 @import "blocks/header";
 @import "blocks/menu";
