--- a/source/sass/base/layout.scss
+++ b/source/sass/base/layout.scss
@@ -26,6 +26,7 @@ body {
   font-size: 15px;
   font-weight: normal;
   line-height: 2;
+  color: #000000;
 }
 
 .page-title {
@@ -48,4 +49,3 @@ body {
   background-color: #e1e1e1;
   border: none;
 }
-
