--- a/source/sass/base/mixins.scss
+++ b/source/sass/base/mixins.scss
@@ -18,9 +18,9 @@
   font-size: 17px;
   font-weight: bold;
   line-height: 1.18;
-  color: $color-brown;
+  color: $color-danger;
   text-transform: uppercase;
-  border: solid 2px $color-brown;
+  border: solid 2px $color-danger;
   width: 260px;
   padding: 20px 0;
   cursor: pointer;
