--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -24,7 +24,7 @@
   text-align: center;
   font-size: 15px;
   line-height: 2;
-  color: $color-brown;
+  color: $color-danger;
 }
 
 .modal__sizes {
@@ -42,7 +42,7 @@
   font-size: 17px;
   font-weight: bold;
   line-height: 0.94;
-  color: $color-brown;
+  color: $color-danger;
   padding: 23px 34px 20px 34px;
   border: solid 2px #ececec;
   background-color: transparent;
