--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -9,7 +9,7 @@
 .reviews__text {
   font-size: 15px;
   line-height: 2;
-  color: $color-brown;
+  color: $color-danger;
   margin: 0 0 40px 0;
 }
 
@@ -24,7 +24,7 @@
   font-style: normal;
   font-size: 17px;
   line-height: 1.76;
-  color: $color-brown;
+  color: $color-danger;
   margin-bottom: 36px;
 }
 
