--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -56,7 +56,7 @@
   font-size: 13px;
   line-height: 2.31;
   text-align: left;
-  color: $color-brown;
+  color: $color-danger;
   margin: 0 0 26px 0;
 }
 
