--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -15,7 +15,7 @@
   display: flex;
   font-size: 15px;
   line-height: 2;
-  color: $color-brown;
+  color: $color-danger;
 }
 
 .contacts__value,
@@ -29,7 +29,7 @@
 }
 
 .contacts__field-line {
-  border-bottom: 1px solid $color-green;
+  border-bottom: 1px solid $color-brand;
 }
 
 .contacts__map {
