--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -8,7 +8,7 @@
 
 .form__text {
   font-size: 13px;
-  color: $color-brown;
+  color: $color-danger;
   line-height: 1.85;
   margin: 30px 0;
 }
@@ -41,14 +41,14 @@
     left: 59px;
     width: 195px;
     height: 1px;
-    background-color: $color-green;
+    background-color: $color-brand;
   }
   position: relative;
   font-size: 17px;
   font-weight: bold;
   line-height: 0.94;
   text-transform: uppercase;
-  color: $color-green;
+  color: $color-brand;
   margin-bottom: 30px;
 }
 
@@ -84,7 +84,7 @@
     opacity: 0.3;
     font-size: 17px;
     line-height: 1.06;
-    color: $color-brown;
+    color: $color-danger;
   }
   width: 100%;
   border: none;
@@ -97,11 +97,11 @@
     opacity: 0.3;
     font-size: 17px;
     line-height: 1.26;
-    color: $color-brown;
+    color: $color-danger;
     padding: 15px 55px 0 17px;
   }
   resize: none;
-  border: solid 2px $color-brown;
+  border: solid 2px $color-danger;
   margin-bottom: 18px;
 }
 
