--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -1,3 +1,7 @@
+.about-us {
+  margin-bottom: 61px;
+}
+
 .about-us__inner {
   @include mobile-center-inner;
 }
@@ -14,10 +18,7 @@
   margin-bottom: 20px;
 }
 
-.about-us__item {
-  &:last-child {
-    margin-bottom: 61px;
-  }
+.about-us__item:not(:last-of-type) {
   margin-bottom: 30px;
 }
 
