--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,9 +1,13 @@
+.contacts {
+  margin-bottom: 39px;
+}
+
 .contacts__inner {
   @include mobile-center-inner;
 }
 
 .contacts__title {
-  margin: 44px 0 42px 0;
+  margin-bottom: 42px;
 }
 
 .contacts__info {
@@ -48,5 +52,4 @@
 .contacts__btn {
   @include button-reset;
   @include button-style;
-  margin-bottom: 39px;
 }
