--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,3 +1,7 @@
+.reviews {
+  margin-bottom: 45px;
+}
+
 .reviews__inner {
   @include mobile-center-inner;
 }
@@ -48,5 +52,4 @@
 
 .reviews__write-btn {
   @include button-style;
-  margin-bottom: 45px;
 }
