--- a/11/css/style.css
+++ b/11/css/style.css
@@ -153,6 +153,9 @@ body {
 .handwork__image-toys {
   opacity: 0.2; }
 
+.baskets {
+  margin-bottom: 36px; }
+
 .baskets__inner {
   margin: 0 auto;
   width: 260px; }
@@ -209,8 +212,10 @@ body {
   border: solid 2px #444444;
   width: 260px;
   padding: 20px 0;
-  cursor: pointer;
-  margin-bottom: 36px; }
+  cursor: pointer; }
+
+.about-us {
+  margin-bottom: 61px; }
 
 .about-us__inner {
   margin: 0 auto;
@@ -227,16 +232,17 @@ body {
 .about-us__image {
   margin-bottom: 20px; }
 
-.about-us__item {
+.about-us__item:not(:last-of-type) {
   margin-bottom: 30px; }
-  .about-us__item:last-child {
-    margin-bottom: 61px; }
 
 .about-us__text {
   font-size: 17px;
   font-weight: bold;
   line-height: 1.18;
   margin: 0; }
+
+.reviews {
+  margin-bottom: 45px; }
 
 .reviews__inner {
   margin: 0 auto;
@@ -289,15 +295,17 @@ body {
   border: solid 2px #444444;
   width: 260px;
   padding: 20px 0;
-  cursor: pointer;
-  margin-bottom: 45px; }
+  cursor: pointer; }
+
+.contacts {
+  margin-bottom: 39px; }
 
 .contacts__inner {
   margin: 0 auto;
   width: 260px; }
 
 .contacts__title {
-  margin: 44px 0 42px 0; }
+  margin-bottom: 42px; }
 
 .contacts__info {
   margin-bottom: 42px; }
@@ -350,8 +358,7 @@ body {
   border: solid 2px #444444;
   width: 260px;
   padding: 20px 0;
-  cursor: pointer;
-  margin-bottom: 39px; }
+  cursor: pointer; }
 
 .footer__inner {
   margin: 0 auto;
@@ -460,6 +467,9 @@ footer {
   border: none;
   padding: 0; }
 
+.catalog {
+  margin-bottom: 30px; }
+
 .catalog__inner {
   margin: 0 auto;
   width: 260px; }
@@ -482,8 +492,9 @@ footer {
 
 .catalog__item {
   width: 260px;
-  border: 1px solid #ececec;
-  margin-bottom: 30px; }
+  border: 1px solid #ececec; }
+  .catalog__item:not(:last-of-type) {
+    margin-bottom: 30px; }
 
 .catalog__link {
   display: block;
@@ -578,6 +589,9 @@ footer {
   padding: 14px 0;
   margin-bottom: 33px; }
 
+.form {
+  margin-bottom: 55px; }
+
 .form__inner {
   margin: 0 auto;
   width: 260px; }
@@ -643,8 +657,8 @@ footer {
 
 .form__legend-email::after {
   top: 6px;
-  left: 78px;
-  width: 180px; }
+  left: 81px;
+  width: 175px; }
 
 .form__legend-type,
 .form__legend-color {
@@ -755,6 +769,6 @@ footer {
   width: 260px;
   padding: 20px 0;
   cursor: pointer;
-  margin: 31px 0 55px 0; }
+  margin-top: 31px; }
 
 /*# sourceMappingURL=style.css.map */
