fixed width textarea

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -108,6 +108,8 @@
     color: $color-danger;
     padding: 15px 55px 0 17px;
   }
+  width: 250px;
+  height: 140px;
   resize: none;
   border: solid 2px $color-danger;
   margin-bottom: 18px;
