--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -34,7 +34,7 @@
   margin-bottom: 31px;
 }
 
-.modal__input:checked + .modal__size {
+.modal__input:checked ~ .modal__size {
   border: solid 2px #63d1bb;
 }
 
