--- a/11/css/style.css
+++ b/11/css/style.css
@@ -97,9 +97,15 @@ body {
 .handwork {
   margin-bottom: 34px; }
 
-.inner {
+.handwork__inner {
   width: 260px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
 
 .handwork__title {
   display: -webkit-box;
@@ -114,14 +120,6 @@ body {
   .handwork__title .handwork__text {
     width: 245px;
     margin: -51px auto 0 auto; }
-
-.handwork__goods .inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between; }
 
 .handwork__goods .handwork__text {
   width: 105px;
@@ -158,7 +156,7 @@ body {
 .baskets {
   margin-bottom: 36px; }
 
-.inner {
+.baskets__inner {
   width: 260px;
   margin: 0 auto; }
 
@@ -219,7 +217,7 @@ body {
 .about-us {
   margin-bottom: 61px; }
 
-.inner {
+.about-us__inner {
   width: 260px;
   margin: 0 auto; }
 
@@ -246,7 +244,7 @@ body {
 .reviews {
   margin-bottom: 45px; }
 
-.inner {
+.reviews__inner {
   width: 260px;
   margin: 0 auto; }
 
@@ -302,7 +300,7 @@ body {
 .contacts {
   margin-bottom: 39px; }
 
-.inner {
+.contacts__inner {
   width: 260px;
   margin: 0 auto; }
 
@@ -356,7 +354,7 @@ body {
   padding: 20px 0;
   cursor: pointer; }
 
-.inner {
+.footer__inner {
   width: 260px;
   margin: 0 auto; }
 
@@ -398,7 +396,7 @@ footer {
           box-shadow: 0 5px 10px 0 rgba(0, 1, 1, 0.25);
   border: solid 1px #c6c6c6; }
 
-.inner {
+.modal__inner {
   width: 260px;
   margin: 0 auto; }
 
@@ -466,7 +464,7 @@ footer {
 .catalog {
   margin-bottom: 30px; }
 
-.inner {
+.catalog__inner {
   width: 260px;
   margin: 0 auto; }
 
@@ -588,7 +586,7 @@ footer {
 .form {
   margin-bottom: 55px; }
 
-.inner {
+.form__inner {
   width: 260px;
   margin: 0 auto; }
 
