--- a/source/sass/base/layout.scss
+++ b/source/sass/base/layout.scss
@@ -20,6 +20,7 @@ input[type="radio"].visually-hidden {
 
 /* Основные стили документа */
 body {
+  min-width: 320px;
   margin: 0;
   padding: 0;
   font-family: "OpenSans", "Arial", sans-serif;
