--- a/source/sass/base/mixins.scss
+++ b/source/sass/base/mixins.scss
@@ -1,7 +1,11 @@
 @mixin inner {
   width: 260px;
   margin: 0 auto;
-  //@media (min-width: 768px) {}
+
+  @media (min-width: 768px) {
+    width: 670px;
+    margin: 0 auto;
+  }
   //@media (min-width: 1150px) {}
 }
 
@@ -19,6 +23,7 @@
   color: $color-danger;
   text-transform: uppercase;
   border: solid 2px $color-danger;
+  background-color: transparent;
   width: 260px;
   padding: 20px 0;
   cursor: pointer;
