--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -20,16 +20,14 @@
   min-height: 300px;
 }
 
-.handwork__goods {
-  .handwork__text {
-    width: 105px;
-    font-size: 19px;
-    font-weight: bold;
-    line-height: 1.26;
-    color: #ffffff;
-    margin: 0;
-    padding-top: 8px;
-  }
+.handwork__text-category {
+  width: 105px;
+  font-size: 19px;
+  font-weight: bold;
+  line-height: 1.26;
+  color: #ffffff;
+  margin: 0;
+  padding-top: 8px;
 }
 
 .handwork__interior {
@@ -79,14 +77,20 @@
     width: 335px;
   }
 
+  .handwork__interior {
+    .handwork__image-itn {
+      padding-right: 0;
+    }
+  }
+
   .handwork__goods {
-    .handwork__text {
+    .handwork__text-category {
       font-size: 20px;
-      padding-top: 5px;
     }
 
     .handwork__inner {
       width: 270px;
+      padding: 0 34px;
     }
     display: flex;
     justify-content: center;
@@ -95,13 +99,11 @@
 
 // Media Desktop
 @media (min-width: 1150px) {
-  .handwork__title {
-    .handwork__text {
-      width: 615px;
-      font-size: 53px;
-      font-weight: bold;
-      line-height: 1.08;
-    }
+  .handwork__text {
+    width: 615px;
+    font-size: 53px;
+    font-weight: bold;
+    line-height: 1.08;
   }
 
   .handwork__interior,
@@ -113,5 +115,9 @@
     .handwork__inner {
       width: 460px;
     }
+  }
+
+  .handwork__text-category {
+    padding: 35px 0;
   }
 }
