--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -100,6 +100,10 @@
 
 // Media Desktop
 @media (min-width: 1150px) {
+  .handwork {
+    margin-bottom: 140px;
+  }
+
   .handwork__text {
     width: 615px;
     font-size: 53px;
