--- a/source/sass/base/mixins.scss
+++ b/source/sass/base/mixins.scss
@@ -1,15 +1,18 @@
 @mixin inner {
   width: 260px;
   padding: 0 30px;
+  margin: 0 auto;
 
   @media (min-width: 768px) {
     width: 670px;
     padding: 0 49px;
+    margin: 0 auto;
   }
 
   @media (min-width: 1150px) {
     width: 1050px;
     padding: 0 50px;
+    margin: 0 auto;
   }
 }
 
